# Multi-Source-Research-Agent

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/core/: config.py  errors.py  logging.py
backend/app/db/: database.py  models.py
backend/app/graph/: architecture.py  builder.py  state.py
backend/app/graph/nodes/: document_retriever.py  merge.py  planner.py  reranker.py  router.py  sql_retriever.py  synthesizer.py  web_retriever.py
backend/app/ingestion/: chunking.py  loaders.py  pipeline.py
backend/app/models/: __init__.py  citations.py  documents.py  evidence.py  requests.py  responses.py  sql.py  synthesis.py  web.py
backend/app/services/: conversation_service.py  health.py
backend/app/services/embeddings/: embedding_service.py
backend/app/services/llm/: __init__.py  factory.py  gemini_client.py  groq_client.py  prompts.py  registry.py
backend/app/services/memory/: __init__.py  conversation_memory.py
backend/app/services/reranking/: __init__.py  reranker.py
backend/app/services/sql/: __init__.py  db.py  factory.py  query_generator.py  retriever.py  validator.py
backend/app/services/synthesis/: __init__.py  citations.py  synthesizer.py
backend/app/services/vectorstore/: document_indexer.py  factory.py  qdrant_client.py
backend/app/services/web/: __init__.py  factory.py  retriever.py  search_tool.py  tavily_tool.py
backend/app/utils/: ids.py
backend/tests/: test_documents_upload.py  test_llm_factory.py
docs/: architecture.md
(+32 files in other folders)
