[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-source-research-agent-backend"
version = "0.1.0"
description = "FastAPI and LangGraph backend for a multi-source GenAI research agent."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "langchain>=0.2.14",
    "langgraph>=0.2.19",
    "langsmith>=0.1.100",
    "langchain-google-genai>=1.0.8",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "asyncpg>=0.29.0",
    "sqlalchemy>=2.0",
    "qdrant-client>=1.11.0",
    "pypdf>=4.3.0",
    "python-multipart>=0.0.9",
    "sentence-transformers>=3.0.0",
    "langchain-groq>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.8",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
strict = true
warn_return_any = true
warn_unused_configs = true
